--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/theme-tools": "^1.1.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "next": "11.0.1",
