--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "next": "11.0.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "yup": "^0.32.9"
